@@ -36,23 +36,39 @@ import java.lang.reflect.Method;
 import java.nio.ByteBuffer;
 import java.nio.MappedByteBuffer;
 import java.nio.file.Files;
-import java.nio.file.LinkOption;
+import java.nio.file.InvalidPathException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.security.AccessController;
-import java.security.PrivilegedAction;
+import java.nio.file.attribute.BasicFileAttributes;
+import java.nio.file.attribute.FileTime;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
+import java.util.concurrent.Callable;
+import java.util.concurrent.atomic.AtomicBoolean;
 
-import io.github.classgraph.ClassGraphException;
+import nonapi.io.github.classgraph.reflection.ReflectionUtils;
+import nonapi.io.github.classgraph.utils.VersionFinder.OperatingSystem;
 
 /**
  * File utilities.
  */
 public final class FileUtils {
+    /** The DirectByteBuffer.cleaner() method. */
+    private static Method directByteBufferCleanerMethod;
 
-    /** The clean() method. */
-    private static Method cleanMethod;
+    /** The Cleaner.clean() method. */
+    private static Method cleanerCleanMethod;
+
+    //    /** The jdk.incubator.foreign.MemorySegment class (JDK14+). */
+    //    private static Class<?> memorySegmentClass;
+    //
+    //    /** The jdk.incubator.foreign.MemorySegment.ofByteBuffer method (JDK14+). */
+    //    private static Method memorySegmentOfByteBufferMethod;
+    //
+    //    /** The jdk.incubator.foreign.MemorySegment.ofByteBuffer method (JDK14+). */
+    //    private static Method memorySegmentCloseMethod;
 
     /** The attachment() method. */
     private static Method attachmentMethod;
@@ -60,11 +76,14 @@ public final class FileUtils {
     /** The Unsafe object. */
     private static Object theUnsafe;
 
+    /** True if class' static fields have been initialized. */
+    private static AtomicBoolean initialized = new AtomicBoolean();
+
     /**
      * The current directory path (only reads the current directory once, the first time this field is accessed, so
      * will not reflect subsequent changes to the current directory).
      */
-    public static final String CURR_DIR_PATH;
+    private static String currDirPath;
 
     /**
      * The maximum size of a file buffer array. Eight bytes smaller than {@link Integer#MAX_VALUE}, since some VMs
@@ -81,24 +100,42 @@ public final class FileUtils {
         // Cannot be constructed
     }
 
-    static {
-        String currDirPathStr = "";
-        try {
-            // The result is moved to currDirPathStr after each step, so we can provide fine-grained debug info and
-            // a best guess at the path, if the current dir doesn't exist (#109), or something goes wrong while
-            // trying to get the current dir path.
-            Path currDirPath = Paths.get("").toAbsolutePath();
-            currDirPathStr = currDirPath.toString();
-            currDirPath = currDirPath.normalize();
-            currDirPathStr = currDirPath.toString();
-            currDirPath = currDirPath.toRealPath(LinkOption.NOFOLLOW_LINKS);
-            currDirPathStr = currDirPath.toString();
-            currDirPathStr = FastPathResolver.resolve(currDirPathStr);
-        } catch (final IOException e) {
-            throw ClassGraphException
-                    .newClassGraphException("Could not resolve current directory: " + currDirPathStr, e);
+    // -------------------------------------------------------------------------------------------------------------
+
+    /**
+     * Get the current directory (only looks at the current directory the first time it is called, then caches this
+     * value for future reads).
+     * 
+     * @return The current directory, as a string
+     */
+    public static String currDirPath() {
+        if (currDirPath == null) {
+            // user.dir should be the current directory at the time the JVM is started, which is
+            // where classpath elements should be resolved relative to
+            Path path = null;
+            final String currDirPathStr = System.getProperty("user.dir");
+            if (currDirPathStr != null) {
+                try {
+                    path = Paths.get(currDirPathStr);
+                } catch (final InvalidPathException e) {
+                    // Fall through
+                }
+            }
+            if (path == null) {
+                // user.dir should probably always be set. But just in case it is not, try reading the
+                // actual current directory at the time ClassGraph is first invoked.
+                try {
+                    path = Paths.get("");
+                } catch (final InvalidPathException e) {
+                    // Fall through
+                }
+            }
+
+            // Normalize current directory the same way all other paths are normalized in ClassGraph,
+            // for consistency
+            currDirPath = FastPathResolver.resolve(path == null ? "" : path.toString());
         }
-        CURR_DIR_PATH = currDirPathStr;
+        return currDirPath;
     }
 
     // -------------------------------------------------------------------------------------------------------------
@@ -150,7 +187,8 @@ public final class FileUtils {
         }
 
         // Handle "..", "." and empty path segments, if any were found
-        final boolean pathHasInitialSlash = pathLen > 0 && pathChars[0] == '/';
+        final boolean pathHasInitialSlash = pathChars[0] == '/';
+        final boolean pathHasInitialSlashSlash = pathHasInitialSlash && pathLen > 1 && pathChars[1] == '/';
         final StringBuilder pathSanitized = new StringBuilder(pathLen + 16);
         if (foundSegmentToSanitize) {
             // Sanitize between "!" section markers separately (".." should not apply past preceding "!")
@@ -203,6 +241,12 @@ public final class FileUtils {
             pathSanitized.append(path);
         }
 
+        // Intended to preserve the double slash at the start of UNC paths (#736).
+        // e.g. //server/file/path
+        if (VersionFinder.OS == OperatingSystem.Windows && pathHasInitialSlashSlash) {
+            pathSanitized.insert(0, '/');
+        }
+
         int startIdx = 0;
         if (removeInitialSlash || !pathHasInitialSlash) {
             // Strip off leading "/" if it needs to be removed, or if it wasn't present in the original path
@@ -253,6 +297,25 @@ public final class FileUtils {
     }
 
     /**
+     * Check if a {@link Path} exists and can be read.
+     *
+     * @param path
+     *            A {@link Path}.
+     * @return true if the file exists and can be read.
+     */
+    public static boolean canRead(final Path path) {
+        try {
+            return canRead(path.toFile());
+        } catch (final UnsupportedOperationException ignored) {
+        }
+        try {
+            return Files.isReadable(path);
+        } catch (final SecurityException e) {
+            return false;
+        }
+    }
+
+    /**
      * Check if a {@link File} exists, is a regular file, and can be read.
      *
      * @param file
@@ -279,13 +342,27 @@ public final class FileUtils {
      */
     public static boolean canReadAndIsFile(final Path path) {
         try {
-            if (!Files.exists(path)) {
+            return canReadAndIsFile(path.toFile());
+        } catch (final UnsupportedOperationException ignored) {
+        }
+        try {
+            if (!Files.isReadable(path)) {
                 return false;
             }
         } catch (final SecurityException e) {
             return false;
         }
         return Files.isRegularFile(path);
+    }
+
+    public static boolean isFile(final Path path) {
+        try {
+            return path.toFile().isFile();
+        } catch (final UnsupportedOperationException e) {
+            return Files.isRegularFile(path);
+        } catch (final SecurityException e) {
+            return false;
+        }
     }
 
     /**
@@ -319,7 +396,12 @@ public final class FileUtils {
      */
     public static void checkCanReadAndIsFile(final Path path) throws IOException {
         try {
-            if (!Files.exists(path)) {
+            checkCanReadAndIsFile(path.toFile());
+            return;
+        } catch (final UnsupportedOperationException ignored) {
+        }
+        try {
+            if (!Files.isReadable(path)) {
                 throw new FileNotFoundException("Path does not exist or cannot be read: " + path);
             }
         } catch (final SecurityException e) {
@@ -357,13 +439,27 @@ public final class FileUtils {
      */
     public static boolean canReadAndIsDir(final Path path) {
         try {
-            if (!Files.exists(path)) {
+            return canReadAndIsDir(path.toFile());
+        } catch (final UnsupportedOperationException ignored) {
+        }
+        try {
+            if (!Files.isReadable(path)) {
                 return false;
             }
         } catch (final SecurityException e) {
             return false;
         }
         return Files.isDirectory(path);
+    }
+
+    public static boolean isDir(final Path path) {
+        try {
+            return path.toFile().isDirectory();
+        } catch (final UnsupportedOperationException e) {
+            return Files.isDirectory(path);
+        } catch (final SecurityException e) {
+            return false;
+        }
     }
 
     /**
@@ -425,22 +521,44 @@ public final class FileUtils {
     private static void lookupCleanMethodPrivileged() {
         if (VersionFinder.JAVA_MAJOR_VERSION < 9) {
             try {
-                // See: https://stackoverflow.com/a/19447758/3950982
-                cleanMethod = Class.forName("sun.misc.Cleaner").getMethod("clean");
-                cleanMethod.setAccessible(true);
-                attachmentMethod = Class.forName("sun.nio.ch.DirectBuffer").getMethod("attachment");
+                // See:
+                // https://stackoverflow.com/a/19447758/3950982
+                cleanerCleanMethod = Class.forName("sun.misc.Cleaner").getDeclaredMethod("clean");
+                cleanerCleanMethod.setAccessible(true);
+                final Class<?> directByteBufferClass = Class.forName("sun.nio.ch.DirectBuffer");
+                directByteBufferCleanerMethod = directByteBufferClass.getDeclaredMethod("cleaner");
+                attachmentMethod = directByteBufferClass.getMethod("attachment");
                 attachmentMethod.setAccessible(true);
             } catch (final SecurityException e) {
-                throw ClassGraphException.newClassGraphException(
-                        "You need to grant classgraph RuntimePermission(\"accessClassInPackage.sun.misc\"), "
-                                + "RuntimePermission(\"accessClassInPackage.sun.nio.ch\"), "
+                throw new RuntimeException(
+                        "You need to grant classgraph RuntimePermission(\"accessClassInPackage.sun.misc\") "
                                 + "and ReflectPermission(\"suppressAccessChecks\")",
                         e);
             } catch (final ReflectiveOperationException | LinkageError e) {
                 // Ignore
             }
         } else {
-            // In JDK9+, calling sun.misc.Cleaner.clean() gives a reflection warning on stderr,
+            //boolean jdkSuccess = false;
+            //    // TODO: This feature is in incubation now -- enable after it leaves incubation.
+            //    // To enable this feature, need to:
+            //    // -- add whatever the "jdk.incubator.foreign" module name is replaced with to <Import-Package>
+            //    //    in pom.xml, as an optional dependency
+            //    // -- add the same module name to module-info.java as a "requires static" optional dependency
+            //    // -- build two versions of module.java: the existing one, for --release=9, and a new version,
+            //    //    for --release=15 (or whatever the final release version ends up being when the feature is
+            //    //    moved out of incubation). 
+            //    try {
+            //        // JDK 14+ Invoke MemorySegment.ofByteBuffer(myByteBuffer).close()
+            //        // https://stackoverflow.com/a/26777380/3950982
+            //        memorySegmentClass = Class.forName("jdk.incubator.foreign.MemorySegment");
+            //        memorySegmentCloseMethod = AutoCloseable.class.getDeclaredMethod("close");
+            //        memorySegmentOfByteBufferMethod = memorySegmentClass.getMethod("ofByteBuffer",
+            //                ByteBuffer.class);
+            //        jdk14Success = true;
+            //    } catch (ClassNotFoundException | NoSuchMethodException | SecurityException e1) {
+            //        // Fall through
+            //    }
+            //if (!jdk14Success) { // In JDK9+, calling sun.misc.Cleaner.clean() gives a reflection warning on stderr,
             // so we need to call Unsafe.theUnsafe.invokeCleaner(byteBuffer) instead, which makes
             // the same call, but does not print the reflection warning.
             try {
@@ -448,35 +566,23 @@ public final class FileUtils {
                 try {
                     unsafeClass = Class.forName("sun.misc.Unsafe");
                 } catch (final ReflectiveOperationException | LinkageError e) {
-                    // jdk.internal.misc.Unsafe doesn't yet have an invokeCleaner() method,
-                    // but that method should be added if sun.misc.Unsafe is removed.
-                    unsafeClass = Class.forName("jdk.internal.misc.Unsafe");
+                    throw new RuntimeException("Could not get class sun.misc.Unsafe", e);
                 }
                 final Field theUnsafeField = unsafeClass.getDeclaredField("theUnsafe");
                 theUnsafeField.setAccessible(true);
                 theUnsafe = theUnsafeField.get(null);
-                cleanMethod = unsafeClass.getMethod("invokeCleaner", ByteBuffer.class);
-                cleanMethod.setAccessible(true);
+                cleanerCleanMethod = unsafeClass.getMethod("invokeCleaner", ByteBuffer.class);
+                cleanerCleanMethod.setAccessible(true);
             } catch (final SecurityException e) {
-                throw ClassGraphException.newClassGraphException(
-                        "You need to grant classgraph RuntimePermission(\"accessClassInPackage.sun.misc\"), "
-                                + "RuntimePermission(\"accessClassInPackage.jdk.internal.misc\") "
+                throw new RuntimeException(
+                        "You need to grant classgraph RuntimePermission(\"accessClassInPackage.sun.misc\") "
                                 + "and ReflectPermission(\"suppressAccessChecks\")",
                         e);
             } catch (final ReflectiveOperationException | LinkageError ex) {
                 // Ignore
             }
+            //}
         }
-    }
-
-    static {
-        AccessController.doPrivileged(new PrivilegedAction<Object>() {
-            @Override
-            public Object run() {
-                lookupCleanMethodPrivileged();
-                return null;
-            }
-        });
     }
 
     /**
@@ -489,13 +595,11 @@ public final class FileUtils {
      * @return true if successful
      */
     private static boolean closeDirectByteBufferPrivileged(final ByteBuffer byteBuffer, final LogNode log) {
+        if (!byteBuffer.isDirect()) {
+            // Nothing to do
+            return true;
+        }
         try {
-            if (cleanMethod == null) {
-                if (log != null) {
-                    log.log("Could not unmap ByteBuffer, cleanMethod == null");
-                }
-                return false;
-            }
             if (VersionFinder.JAVA_MAJOR_VERSION < 9) {
                 if (attachmentMethod == null) {
                     if (log != null) {
@@ -512,37 +616,53 @@ public final class FileUtils {
                     return false;
                 }
                 // Invoke ((DirectBuffer) byteBuffer).cleaner().clean()
-                final Method cleaner = byteBuffer.getClass().getMethod("cleaner");
-                if (cleaner == null) {
+                if (directByteBufferCleanerMethod == null) {
+                    if (log != null) {
+                        log.log("Could not unmap ByteBuffer, cleanerMethod == null");
+                    }
+                    return false;
+                }
+                try {
+                    directByteBufferCleanerMethod.setAccessible(true);
+                } catch (final Exception e) {
+                    if (log != null) {
+                        log.log("Could not unmap ByteBuffer, cleanerMethod.setAccessible(true) failed");
+                    }
+                    return false;
+                }
+                final Object cleanerInstance = directByteBufferCleanerMethod.invoke(byteBuffer);
+                if (cleanerInstance == null) {
                     if (log != null) {
                         log.log("Could not unmap ByteBuffer, cleaner == null");
                     }
                     return false;
                 }
-                try {
-                    cleaner.setAccessible(true);
-                } catch (final Exception e) {
+                if (cleanerCleanMethod == null) {
                     if (log != null) {
-                        log.log("Could not unmap ByteBuffer, cleaner.setAccessible(true) failed");
-                    }
-                    return false;
-                }
-                final Object cleanerResult = cleaner.invoke(byteBuffer);
-                if (cleanerResult == null) {
-                    if (log != null) {
-                        log.log("Could not unmap ByteBuffer, cleanerResult == null");
+                        log.log("Could not unmap ByteBuffer, cleanMethod == null");
                     }
                     return false;
                 }
                 try {
-                    cleanMethod.invoke(cleaner.invoke(byteBuffer));
+                    cleanerCleanMethod.invoke(cleanerInstance);
                     return true;
                 } catch (final Exception e) {
                     if (log != null) {
-                        log.log("Could not unmap ByteBuffer, cleanMethod.invoke(cleanerResult) failed: " + e);
+                        log.log("Could not unmap ByteBuffer, cleanMethod.invoke(cleaner) failed: " + e);
                     }
                     return false;
                 }
+                //    } else if (memorySegmentOfByteBufferMethod != null) {
+                //        // JDK 14+
+                //        final Object memorySegment = memorySegmentOfByteBufferMethod.invoke(null, byteBuffer);
+                //        if (memorySegment == null) {
+                //            if (log != null) {
+                //                log.log("Got null MemorySegment, could not unmap ByteBuffer");
+                //            }
+                //            return false;
+                //        }
+                //        memorySegmentCloseMethod.invoke(memorySegment);
+                //        return true;
             } else {
                 if (theUnsafe == null) {
                     if (log != null) {
@@ -550,8 +670,14 @@ public final class FileUtils {
                     }
                     return false;
                 }
+                if (cleanerCleanMethod == null) {
+                    if (log != null) {
+                        log.log("Could not unmap ByteBuffer, cleanMethod == null");
+                    }
+                    return false;
+                }
                 try {
-                    cleanMethod.invoke(theUnsafe, byteBuffer);
+                    cleanerCleanMethod.invoke(theUnsafe, byteBuffer);
                     return true;
                 } catch (final IllegalArgumentException e) {
                     // Buffer is a duplicate or slice
@@ -575,17 +701,108 @@ public final class FileUtils {
      *            The log.
      * @return True if the byteBuffer was closed/unmapped.
      */
-    public static boolean closeDirectByteBuffer(final ByteBuffer byteBuffer, final LogNode log) {
+    public static boolean closeDirectByteBuffer(final ByteBuffer byteBuffer, final ReflectionUtils reflectionUtils,
+            final LogNode log) {
         if (byteBuffer != null && byteBuffer.isDirect()) {
-            return AccessController.doPrivileged(new PrivilegedAction<Boolean>() {
-                @Override
-                public Boolean run() {
-                    return closeDirectByteBufferPrivileged(byteBuffer, log);
+            if (!initialized.get()) {
+                try {
+                    reflectionUtils.doPrivileged(new Callable<Void>() {
+                        @Override
+                        public Void call() throws Exception {
+                            lookupCleanMethodPrivileged();
+                            return null;
+                        }
+                    });
+                } catch (final Throwable e) {
+                    throw new RuntimeException("Cannot get buffer cleaner method", e);
                 }
-            });
+                initialized.set(true);
+            }
+            try {
+                return reflectionUtils.doPrivileged(new Callable<Boolean>() {
+                    @Override
+                    public Boolean call() throws Exception {
+                        return closeDirectByteBufferPrivileged(byteBuffer, log);
+                    }
+                });
+            } catch (final Throwable t) {
+                return false;
+            }
         } else {
             // Nothing to unmap
             return false;
         }
+    }
+
+    public static FileAttributesGetter createCachedAttributesGetter() {
+        final Map<Path, BasicFileAttributes> cache = new HashMap<>();
+        return new FileAttributesGetter() {
+            @Override
+            public BasicFileAttributes get(final Path path) {
+                BasicFileAttributes attributes = cache.get(path);
+                if (attributes == null) {
+                    attributes = readAttributes(path);
+                    cache.put(path, attributes);
+                }
+                return attributes;
+            }
+        };
+    }
+
+    public static BasicFileAttributes readAttributes(final Path path) {
+        try {
+            return Files.readAttributes(path, BasicFileAttributes.class);
+        } catch (final IOException e) {
+            return new BasicFileAttributes() {
+                @Override
+                public FileTime lastModifiedTime() {
+                    return FileTime.fromMillis(path.toFile().lastModified());
+                }
+
+                @Override
+                public FileTime lastAccessTime() {
+                    throw new UnsupportedOperationException();
+                }
+
+                @Override
+                public FileTime creationTime() {
+                    return FileTime.fromMillis(0);
+                }
+
+                @Override
+                public boolean isRegularFile() {
+                    return FileUtils.isFile(path);
+                }
+
+                @Override
+                public boolean isDirectory() {
+                    return FileUtils.isDir(path);
+                }
+
+                @Override
+                public boolean isSymbolicLink() {
+                    return false;
+                }
+
+                @Override
+                public boolean isOther() {
+                    return !isRegularFile() && !isDirectory();
+                }
+
+                @Override
+                public long size() {
+                    return path.toFile().length();
+                }
+
+                @Override
+                public Object fileKey() {
+                    throw new UnsupportedOperationException();
+                }
+            };
+        }
+    }
+
+    public interface FileAttributesGetter {
+        BasicFileAttributes get(Path path);
     }
 }
